separated mapped superclasses from entities; added controller actions support for entities

--- a/production/de.guite.modulestudio.gmf.main.nl1.de/messages_de.properties
+++ b/production/de.guite.modulestudio.gmf.main.nl1.de/messages_de.properties
@@ -62,27 +62,29 @@ VarTypes4Group_desc=Variablen-Elemente
 Links5Group_title=Links
 Links5Group_desc=Beziehungs-Elemente
 
-Entity1CreationTool_title=Entität
-Entity1CreationTool_desc=Neue Daten-Entität erstellen
-EntityIndex2CreationTool_title=Entitäts-Index
-EntityIndex2CreationTool_desc=Neuen Entitäts-Index erstellen
-EntityIndexItem3CreationTool_title=Index-Eintrag
-EntityIndexItem3CreationTool_desc=Neuen Index-Eintrag erstellen
-Variables4CreationTool_title=Variablen
-Variables4CreationTool_desc=Neuen Container für Variablen erstellen
-Admincontroller5CreationTool_title=Admin-Controller
-Admincontroller5CreationTool_desc=Neuen Controller mit Admin-Rolle erstellen
-Usercontroller6CreationTool_title=User-Controller
-Usercontroller6CreationTool_desc=Neuen Controller mit Benutzer-Rolle erstellen
-Ajaxcontroller7CreationTool_title=Ajax-Controller
-Ajaxcontroller7CreationTool_desc=Neuen Ajax-Controller erstellen
-Customcontroller8CreationTool_title=Eigener Controller
-Customcontroller8CreationTool_desc=Neuen individuellen Controller erstellen
-Settings9CreationTool_title=Einstellungen
-Settings9CreationTool_desc=Neuen Container für Generator-Einstellungen erstellen
+Mappedsuperclass1CreationTool_title=Gemappte Oberklasse
+Mappedsuperclass1CreationTool_desc=Neue Oberklasse erstellen
+Entity2CreationTool_title=Entität
+Entity2CreationTool_desc=Neue Daten-Entität erstellen
+EntityIndex3CreationTool_title=Entitäts-Index
+EntityIndex3CreationTool_desc=Neuen Entitäts-Index erstellen
+EntityIndexItem4CreationTool_title=Index-Eintrag
+EntityIndexItem4CreationTool_desc=Neuen Index-Eintrag erstellen
+Variables5CreationTool_title=Variablen
+Variables5CreationTool_desc=Neuen Container für Variablen erstellen
+Admincontroller6CreationTool_title=Admin-Controller
+Admincontroller6CreationTool_desc=Neuen Controller mit Admin-Rolle erstellen
+Usercontroller7CreationTool_title=User-Controller
+Usercontroller7CreationTool_desc=Neuen Controller mit Benutzer-Rolle erstellen
+Ajaxcontroller8CreationTool_title=Ajax-Controller
+Ajaxcontroller8CreationTool_desc=Neuen Ajax-Controller erstellen
+Customcontroller9CreationTool_title=Eigener Controller
+Customcontroller9CreationTool_desc=Neuen individuellen Controller erstellen
+Settings10CreationTool_title=Einstellungen
+Settings10CreationTool_desc=Neuen Container für Generator-Einstellungen erstellen
 
-Main1CreationTool_title=Main
-Main1CreationTool_desc=Neue Main Aktion erstellen
+Index1CreationTool_title=Index
+Index1CreationTool_desc=Neue Index Aktion erstellen
 View2CreationTool_title=View
 View2CreationTool_desc=Neue View Aktion erstellen
 Display3CreationTool_title=Display
@@ -170,7 +172,10 @@ WizardNewFileCreationPage_BrowseButton=Durchsuchen
 WizardNewFileCreationPage_SelectNewFileDialog=Neue Datei wählen
 WizardNewFileCreationPage_EmptyFileNameError=Dateinamen spezifizieren
 WizardNewFileCreationPage_InvalidFileNameError=Ungültiger Dateiname
-FieldsEditPart_title=Felder
+
+MappedSuperClassFieldsEditPart_title=Felder
+EntityFieldsEditPart_title=Felder
+EntityActionsEditPart_title=Aktionen
 EntityIndexesEditPart_title=Indexe
 ListFieldItemsEditPart_title=Einträge
 IndexItemsEditPart_title=Einträge
