--- a/production/de.guite.modulestudio.gmf.main.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.gmf.main.nl1.de/plugin_de.properties
@@ -17,7 +17,6 @@ newDiagramActionLabel=Anwendungs-Diagramm
 websiteActionLabel=Homepage
 generateActionLabel=Anwendung generieren
 importXmlTableDefinitionLabel=XML-Tabellendefinition importieren
-migrateOldModelLabel=Altes Modell aus 0.5.x migrieren
 openURIActionLabel=URI öffnen...
 openURIActionDescription=Datei über URI öffnen
 openActionLabel=Öffnen...
@@ -47,6 +46,7 @@ prefpage.de.guite.modulestudio.gmf.main.rulersAndGrid=Lineale und Grid
 # Providers
 metatype.name.Application_1000=Anwendung
 metatype.name.SettingsContainer_2001=Einstellungen
+metatype.name.MappedSuperClass_2100=Gemappte Oberklasse
 metatype.name.Entity_2101=Entität
 metatype.name.Variables_2102=Variablen
 metatype.name.AdminController_2201=Admin Controller
@@ -78,7 +78,7 @@ metatype.name.TextVar_3122=Text Var
 metatype.name.FilePathVar_3123=Dateipfad Var
 metatype.name.ListVar_3124=Liste Var
 metatype.name.ListVarItem_3125=Liste Var Eintrag
-metatype.name.MainAction_3201=Main Aktion
+metatype.name.MainAction_3201=Index Aktion
 metatype.name.ViewAction_3202=View Aktion
 metatype.name.DisplayAction_3203=Display Aktion
 metatype.name.EditAction_3204=Edit Aktion
