--- a/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
+++ b/production/de.guite.modulestudio.metamodel.edit.nl1.de/plugin_de.properties
@@ -18,6 +18,8 @@ _UI_Application_type = Anwendung
 _UI_SettingsContainer_type = Einstellungen
 _UI_ReferredApplication_type = Referenzierte Anwendung
 _UI_Models_type = Models
+_UI_DataObject_type = Datenobjekt
+_UI_MappedSuperClass_type = Gemappte Oberklasse
 _UI_Entity_type = Entität
 _UI_EntityField_type = Entitäts-Field
 _UI_DerivedField_type = Abgeleitetes Field
@@ -66,7 +68,7 @@ _UI_AdminController_type = Admin Controller
 _UI_UserController_type = User Controller
 _UI_AjaxController_type = Ajax Controller
 _UI_CustomController_type = Eigener Controller
-_UI_MainAction_type = Main Aktion
+_UI_MainAction_type = Index Aktion
 _UI_ViewAction_type = View Aktion
 _UI_DisplayAction_type = Display Aktion
 _UI_EditAction_type = Edit Aktion
@@ -179,20 +181,18 @@ _UI_ReferredApplication_importURI_feature = Import-URI
 _UI_ReferredApplication_importURI_description = URI zur importierten Modelldatei.
 _UI_ReferredApplication_dependencyType_feature = Art der Abhängigkeiten
 _UI_ReferredApplication_dependencyType_description = Die Art von Abhängigkeit, die für die referenzierte Anwendung verwendet werden soll.
+_UI_DataObject_application_feature = Anwendung
+_UI_DataObject_application_description = Referenz zur enthaltenden Anwendung.
+_UI_DataObject_fields_feature = Felder
+_UI_DataObject_fields_description = Liste der Felder, die in diesem Datenobjekt enthalten sind.
+_UI_DataObject_incoming_feature = Eingehend
+_UI_DataObject_incoming_description = Liste eingehender Beziehungen (Elternobjekte).
+_UI_DataObject_outgoing_feature = Ausgehend
+_UI_DataObject_outgoing_description = Liste ausgehender Beziehungen (Kindobjekte).
 _UI_Entity_nameMultiple_feature = Name Mehrzahl
 _UI_Entity_nameMultiple_description = Pluralform des Entitätsnamens.
 _UI_Entity_displayPattern_feature = Anzeigemuster
 _UI_Entity_displayPattern_description = Muster zur Anzeige von Instanzen dieser Entität.
-_UI_Entity_fields_feature = Felder
-_UI_Entity_fields_description = Liste der Felder, die in dieser Entität enthalten sind.
-_UI_Entity_application_feature = Anwendung
-_UI_Entity_application_description = Referenz zur enthaltenden Anwendung.
-_UI_Entity_incoming_feature = Eingehend
-_UI_Entity_incoming_description = Liste eingehender Beziehungen (Elternobjekte).
-_UI_Entity_outgoing_feature = Ausgehend
-_UI_Entity_outgoing_description = Liste ausgehender Beziehungen (Kindobjekte).
-_UI_Entity_listeners_feature = Listener
-_UI_Entity_listeners_description = Liste eigener Event Listener.
 _UI_Entity_indexes_feature = Indexe
 _UI_Entity_indexes_description = Liste von Indexen für diese Entität.
 _UI_Entity_leading_feature = Führend
@@ -231,8 +231,6 @@ _UI_Entity_slugStyle_feature = Slug-Stil
 _UI_Entity_slugStyle_description = Der verwendete Slug-Stil.
 _UI_Entity_tree_feature = Tree
 _UI_Entity_tree_description = Ob und welche Art von Baumstruktur verwendet werden soll.
-_UI_Entity_mappedSuperClass_feature = Gemappte Oberklasse
-_UI_Entity_mappedSuperClass_description = Ob dies eine gemappte Oberklasse ist oder eine normale Entität.
 _UI_Entity_onAccountDeletionCreator_feature = Bei Account-Löschung Ersteller
 _UI_Entity_onAccountDeletionCreator_description = Kontrolliert, wie eine App den Ersteller verändern soll, wenn Benutzer gelöscht werden.
 _UI_Entity_onAccountDeletionLastEditor_feature = Bei Account-Löschung Letzter Editor
@@ -247,6 +245,8 @@ _UI_Entity_ownerPermission_feature = Eigner Zugriffsrecht
 _UI_Entity_ownerPermission_description = Ob Benutzer ihre eigenen Daten verwalten und ändern können sollen.
 _UI_Entity_softDeleteable_feature = Soft Deleteable
 _UI_Entity_softDeleteable_description = Ob gelöschte Einträge nur als gelöscht markiert werden sollen anstatt sie zu löschen.
+_UI_Entity_actions_feature = Actions
+_UI_Entity_actions_description = Liste der in diesem Entity Controller enthaltenen Aktionen.
 _UI_EntityField_entity_feature = Entität
 _UI_EntityField_entity_description = Entität, die dieses Feld enthält.
 _UI_DerivedField_dbName_feature = DB Name
@@ -521,6 +521,8 @@ _UI_ListVarItem_default_feature = Standard
 _UI_ListVarItem_default_description = Ob dieser Eintrag per Standard ausgewählt werden soll oder nicht.
 _UI_Action_controller_feature = Controller
 _UI_Action_controller_description = Übergeordneter Controller dieser Aktion.
+_UI_Action_entity_feature = Entität
+_UI_Action_entity_description = Übergeordneter Entity Controller dieser Aktion.
 _UI_Controller_actions_feature = Aktionen
 _UI_Controller_actions_description = Liste der in diesem Controller enthaltenen Aktionen.
 _UI_Controller_application_feature = Application
@@ -631,13 +633,14 @@ _UI_RelationEditType_ACTIVE_EDIT_PASSIVE_NONE_literal = ACTIVE_EDIT_PASSIVE_NONE
 _UI_InheritanceStrategyType_SINGLE_TABLE_literal = SINGLE_TABLE
 _UI_InheritanceStrategyType_JOINED_literal = JOINED
 
-_UI_GeneralPropertyCategory = Allgemein
-_UI_FeaturesPropertyCategory = Features
-_UI_PositioningPropertyCategory = Positionierung
+_UI_BasicdataPropertyCategory = Basis-Daten
 _UI_BehaviourPropertyCategory = Verhalten
 _UI_ContainedelementsPropertyCategory = Enthaltene Elemente
-_UI_BasicdataPropertyCategory = Basis-Daten
+_UI_ContainerPropertyCategory = Container
+_UI_FeaturesPropertyCategory = Features
 _UI_FurtheroptionsPropertyCategory = Weitere Optionen
+_UI_GeneralPropertyCategory = Allgemein
+_UI_PositioningPropertyCategory = Positionierung
+_UI_RelationsPropertyCategory = Beziehungen
 _UI_SizePropertyCategory = Größe
 _UI_WorkflowPropertyCategory = Workflow
-_UI_ContainerPropertyCategory = Container
