--- a/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -1,12 +1,12 @@
 MostDslValidator.ActionNameMustBeLonger=Der Name der Aktion muss eine Länge von mindestens drei Zeichen haben.
-MostDslValidator.ActionNameMustNotBeReserved=Der Name der Aktion darf nicht Main, View, Display, Edit oder Delete sein.
+MostDslValidator.ActionNameMustNotBeReserved=Der Name der Aktion darf nicht Index, View, Display, Edit oder Delete sein.
 MostDslValidator.ActionNameMustNotBeReservedHooks=Der Name der Aktion darf nicht Hooks sein, da dies eine reservierte Funktion in Admin-Controllern ist.
 MostDslValidator.ActionNameMustNotBeReservedNew=Der Name der Aktion darf nicht New sein, da dies ein reservierter Begriff ist.
 MostDslValidator.ActionNameShouldBeLonger=Der Name der Aktion sollte eine Länge von mindestens vier Zeichen haben.
-MostDslValidator.ActionNeedsController=Die Aktion muss einem Controller zugewiesen werden.
+MostDslValidator.ActionNeedsControllerOrEntity=Die Aktion muss einem Controller oder einer Entität zugewiesen werden.
 MostDslValidator.ActionNeedsName=Die Aktion muss einen Namen haben.
 MostDslValidator.ApplicationEmailAddressIsInvalid=Der Wert für die E-Mail-Adresse der Anwendung muss eine gültige E-Mail-Adresse sein.
-MostDslValidator.ApplicationHasHighEntityAmount=Die Anzahl an Entitäten wird recht hoch. Vielleicht macht es Sinn das Modell in zwei einzelne Anwendungen aufzuteilen.
+MostDslValidator.ApplicationHasHighDataObjectAmount=Die Anzahl der Datenobjekte wird recht hoch. Vielleicht macht es Sinn das Modell in zwei einzelne Anwendungen aufzuteilen.
 MostDslValidator.ApplicationHasMultipleAdminControllers=Es darf nicht mehr als ein Admin-Controller existieren.
 MostDslValidator.ApplicationHasMultipleAjaxControllers=Es darf nicht mehr als ein Ajax-Controller existieren.
 MostDslValidator.ApplicationHasMultipleLeadingEntities=Die Anwendung darf nur eine als führend markierte Entität beinhalten.
@@ -42,13 +42,17 @@ MostDslValidator.ApplicationVersionIsInvalid=Die Version der Anwendung muss dem 
 MostDslValidator.CalculatedFieldNeedsOperand=Das Feld muss sich auf mindestens ein abgeleitetes Feld beziehen.
 MostDslValidator.ControllerActionsMustBeUnique=Die Namen von eigenen Aktionen in einem Controller müssen eindeutig sein.
 MostDslValidator.ControllerAjaxMustNotHaveDeleteAction=Dieser Controller darf keine Delete-Aktion enthalten. Bitte entferne sie.
-MostDslValidator.ControllerContainerNeedsAjaxController=Bitte erstelle einen Ajax-Controller mit einer beliebigen Aktion, wie Main, da er zur einwandfreien Verarbeitung Deines Modells notwendig ist.
+MostDslValidator.ControllerContainerNeedsAjaxController=Bitte erstelle einen Ajax-Controller mit einer beliebigen Aktion, wie Index, da er zur einwandfreien Verarbeitung Deines Modells notwendig ist.
 MostDslValidator.ControllerContainerNeedsController=Der Controller-Container muss mindestens einen Controller enthalten.
 MostDslValidator.ControllerMustNotHaveMultipleDeleteActions=Es darf nicht mehr als eine Delete-Aktion in einem Controller geben.
 MostDslValidator.ControllerMustNotHaveMultipleDisplayActions=Es darf nicht mehr als eine Display-Aktion in einem Controller geben.
 MostDslValidator.ControllerMustNotHaveMultipleEditActions=Es darf nicht mehr als eine Edit-Aktion in einem Controller geben.
-MostDslValidator.ControllerMustNotHaveMultipleMainActions=Es darf nicht mehr als eine Main-Aktion in einem Controller geben.
+MostDslValidator.ControllerMustNotHaveMultipleIndexActions=Es darf nicht mehr als eine Index-Aktion in einem Controller geben.
 MostDslValidator.ControllerMustNotHaveMultipleViewActions=Es darf nicht mehr als eine View-Aktion in einem Controller geben.
+MostDslValidator.ControllerMustNotContainViewActions=Es darf keine View-Aktion in einem (Admin | User | Custom) Controller geben.
+MostDslValidator.ControllerMustNotContainDisplayActions=Es darf keine Display-Aktion in einem (Admin | User | Custom) Controller geben.
+MostDslValidator.ControllerMustNotContainEditActions=Es darf keine Edit-Aktion in einem (Admin | User | Custom) Controller geben.
+MostDslValidator.ControllerMustNotContainDeleteActions=Es darf keine Delete-Aktion in einem (Admin | User | Custom) Controller geben.
 MostDslValidator.ControllerNameMustBeLonger=Der Name des Controllers muss eine Länge von mindestens drei Zeichen haben.
 MostDslValidator.ControllerNameMustNotBeReserved=Der Name des Controllers darf nicht sein 
 MostDslValidator.ControllerNameMustNotContainUnderscores=Der Name des Controllers darf keine Unterstriche enthalten, bitte umbenennen in 
@@ -58,6 +62,19 @@ MostDslValidator.ControllerNeedsAction=Jeder Controller muss mindestens eine Akt
 MostDslValidator.ControllerNeedsApplication=Der Controller muss einer Anwendung zugewiesen werden.
 MostDslValidator.ControllerNeedsName=Der Controller muss einen Namen haben.
 MostDslValidator.CustomControllersMustBeUnique=Die Namen der eigenen Controller müssen eindeutig sein.
+MostDslValidator.DataObjectDoesNotNeedIdFields=Entferne ID-Felder... Du brauchst sie nicht ;-) außer vielleicht Du willst Composite Primary Keys erstellen (Datenobjekt: 
+MostDslValidator.DataObjectDoesNotNeedPrimaryKeyField=Du brauchst ein Feld nicht als primär zu markieren, dies wird automatisch erledigt - außer vielleicht Du willst Composite Primary Keys erstellen.
+MostDslValidator.DataObjectFieldsMustNotBeTooLarge=Die Länge aller Felder des Datenobjekts darf nicht größer als 21845 sein.
+MostDslValidator.DataObjectNameMustBeLonger=Der Name des Datenobjekts muss eine Länge von mindestens zwei Zeichen haben.
+MostDslValidator.DataObjectNameMustNotBeReserved=Der Name des Datenobjekts ist ein reservierter Bezeichner
+MostDslValidator.DataObjectNameMustNotContainUnderscores=Der Name des Datenobjekts darf keine Unterstriche enthalten, bitte umbenennen in 
+MostDslValidator.DataObjectNameMustNotEqualApplication=Ein Datenobjekt darf nicht den gleichen Namen haben wie die Anwendung.
+MostDslValidator.DataObjectNameShouldBeLonger=Der Name des Datenobjekts sollte eine Länge von mindestens vier Zeichen haben.
+MostDslValidator.DataObjectNameShouldStartWithLowerCase=Der Name des Datenobjekts sollte mit einem Kleinbuchstaben beginnen.
+MostDslValidator.DataObjectNeedsApplication=Das Datenobjekt muss einer Anwendung zugewiesen werden.
+MostDslValidator.DataObjectNeedsField=Jedes Datenobjekt muss mindestens ein Feld enthalten oder Felder von einem Elternobjekt erben.
+MostDslValidator.DataObjectNeedsName=Jedes Datenobjekt muss einen Namen haben.
+MostDslValidator.DataObjectsMustBeUnique=Die Namen der Datenobjekte müssen eindeutig sein.
 MostDslValidator.DerivedFieldDbNameIsInvalidIdentifier=Der DB Name muss ein gültiger Bezeichner sein (z. B. keine Leerzeichen oder Sonderzeichen): {0}.
 MostDslValidator.DerivedFieldDbNameMustBeLonger=Der DB Name des Feldes muss eine Länge von mindestens zwei Zeichen haben.
 MostDslValidator.DerivedFieldDbNameMustNotBeReservedZikula=Der DB Name des Feldes ist ein reservierter Bezeichner (
@@ -66,7 +83,7 @@ MostDslValidator.DerivedFieldDbNameMustNotBeReservedWorkflow=Der DB Name des Fel
 MostDslValidator.DerivedFieldDbNameMustNotBeReservedDatabaseKeyword=Der DB Name des Feldes ist ein reserviertes Datenbank-Schlüsselwort.
 MostDslValidator.DerivedFieldDbNameShouldBeLonger=Der DB Name des Feldes sollte eine Länge von mindestens drei Zeichen haben.
 MostDslValidator.DerivedFieldDbNameShouldStartWithLowerCase=Der DB Name des Feldes sollte mit einem Kleinbuchstaben beginnen.
-MostDslValidator.EntitiesMustBeUnique=Die Namen der Entitäten müssen eindeutig sein.
+MostDslValidator.EntityActionsMustBeUnique=Die Namen von eigenen Aktionen in einer Entität müssen eindeutig sein.
 MostDslValidator.EntityAttributableMustNotContainReserved=Entitäten mit Attributen haben ein zusätzliches Feld zur Referenzierung derselben
 MostDslValidator.EntityAttributableMustNotContainReservedField=Daher dürfen Deine Felder diesen Namen nicht enthalten.
 MostDslValidator.EntityAttributableMustNotContainReservedSource=Daher darf Deine Referenz diesen Quell-Alias nicht enthalten.
@@ -77,8 +94,6 @@ MostDslValidator.EntityCategorisableMustNotContainReservedSource=Daher darf Dein
 MostDslValidator.EntityCategorisableMustNotContainReservedTarget=Daher darf Deine Referenz diesen Ziel-Alias nicht enthalten.
 MostDslValidator.EntityCompositeHasWrongIdentifierStrategy=Composite-Entitäten können als Identifier-Strategie nur NONE haben.
 MostDslValidator.EntityDisplayPatternContainsNoField=Das Anzeigemuster enthält keine Feldreferenzen. Bitte prüfe, ob dies Absicht ist oder nicht.
-MostDslValidator.EntityDoesNotNeedIdFields=Entferne ID-Felder... Du brauchst sie nicht ;-) außer vielleicht Du willst Composite Primary Keys erstellen (Entität: 
-MostDslValidator.EntityDoesNotNeedPrimaryKeyField=Du brauchst ein Feld nicht als primär zu markieren, dies wird automatisch erledigt - außer vielleicht Du willst Composite Primary Keys erstellen.
 MostDslValidator.EntityFieldAbstractDateMustNotBePastAndFuture=Ein Wert kann nicht gleichzeitig in der Vergangenheit und in der Zukunft sein.
 MostDslValidator.EntityFieldAggregateNeedsLocking=Entitäten mit einem Aggregat-Feld sollten eine Locking-Strategie nutzen (optimistisches oder pessimistisches Lesen).
 MostDslValidator.EntityFieldAggregateNeedsValidRelation=Aggregat-Felder funktionieren nur in Kombination mit einer ausgehenden und bidirektionalen Eins-zu-Viele-Beziehung mit persist-Kaskade.
@@ -126,7 +141,6 @@ MostDslValidator.EntityFieldNameShouldStartWithLowerCase=Der Name des Feldes sol
 MostDslValidator.EntityFieldNeedsEntity=Das Feld muss einer Entität zugewiesen werden.
 MostDslValidator.EntityFieldNeedsName=Jedes Feld muss einen Namen haben.
 MostDslValidator.EntityFieldsMustBeUnique=Die Namen der Felder müssen eindeutig sein.
-MostDslValidator.EntityFieldsMustNotBeTooLarge=Die Länge aller Felder der Entität darf nicht größer als 21845 sein.
 MostDslValidator.EntityFieldStringLengthMustNotBeGreaterMinLength=Die Größe des Strings muss größer sein als die minimale Länge.
 MostDslValidator.EntityFieldStringLengthMustNotBeTooLarge=Die Größe des Strings darf nicht größer sein als 255; für größere Daten verwende Text-Felder.
 MostDslValidator.EntityFieldStringLengthMustNotBeZero=Die Größe des Strings darf nicht kleiner als 1 sein.
@@ -175,13 +189,15 @@ MostDslValidator.EntityIndexNeedsItem=Jeder Index muss mindestens einen Eintrag 
 MostDslValidator.EntityIndexNeedsName=Jeder Index muss einen Namen haben.
 MostDslValidator.EntityInheritanceRelationshipMustNotBeSelfRelation=Selbstbeziehungen sind nicht erlaubt für Vererbungsbeziehungen.
 MostDslValidator.EntityLoggableNeedsVersionField=Entitäten mit Loggable benötigen ein Feld mit dem aktivierten Attribut version.
-MostDslValidator.EntityMappedSuperclassMustNotBeBidirectional=Alle Assoziationen, die von gemappten Oberklassen ausgehen, müssen undirektional sein.
-MostDslValidator.EntityMappedSuperclassMustNotHaveMultipleManyToManyRelations=Viele-zu-Viele-Beziehungen sind für gemappte Oberklassen nur möglich, wenn sie nur in einer Entität auf einmal verwendet werden.
-MostDslValidator.EntityMappedSuperclassMustNotHaveOneToManyRelation=Eins-zu-Viele-Beziehungen sind nicht möglich für gemappte Oberklassen.
 MostDslValidator.EntityMetaDataMustNotContainReserved=Entitäten mit Meta-Daten haben ein zusätzliches Feld zur Referenzierung derselben
 MostDslValidator.EntityMetaDataMustNotContainReservedField=Daher dürfen Deine Felder diesen Namen nicht enthalten.
 MostDslValidator.EntityMetaDataMustNotContainReservedSource=Daher darf Deine Referenz diesen Quell-Alias nicht enthalten.
 MostDslValidator.EntityMetaDataMustNotContainReservedTarget=Daher darf Deine Referenz diesen Ziel-Alias nicht enthalten.
+MostDslValidator.EntityMustNotHaveMultipleDeleteActions=Es darf nicht mehr als eine Delete-Aktion in einer Entität geben.
+MostDslValidator.EntityMustNotHaveMultipleDisplayActions=Es darf nicht mehr als eine Display-Aktion in einer Entität geben.
+MostDslValidator.EntityMustNotHaveMultipleEditActions=Es darf nicht mehr als eine Edit-Aktion in einer Entität geben.
+MostDslValidator.EntityMustNotHaveMultipleIndexActions=Es darf nicht mehr als eine Index-Aktion in einer Entität geben.
+MostDslValidator.EntityMustNotHaveMultipleViewActions=Es darf nicht mehr als eine View-Aktion in einer Entität geben.
 MostDslValidator.EntityMustNotInheritFromMultipleEntities=Eine Entität kann nicht von mehreren Entitäten erben.
 MostDslValidator.EntityMustReplyToIncomingRelations=Die Entität muss alle eingehenden Beziehungen referenzieren.
 MostDslValidator.EntityMustReplyToOutgoingRelations=Die Entität muss alle ausgehenden Beziehungen referenzieren.
@@ -189,16 +205,8 @@ MostDslValidator.EntityNameMultipleMustBeLonger=Der Mehrfachname der Entität mus
 MostDslValidator.EntityNameMultipleMustNotContainUnderscores=Der Mehrfachname der Entität darf keine Unterstriche enthalten, bitte umbenennen in 
 MostDslValidator.EntityNameMultipleShouldBeLonger=Der Mehrfachname der Entität sollte eine Länge von mindestens vier Zeichen haben.
 MostDslValidator.EntityNameMultipleShouldStartWithLowerCase=Der Mehrfachname der Entität sollte mit einem Kleinbuchstaben beginnen.
-MostDslValidator.EntityNameMustBeLonger=Der Name der Entität muss eine Länge von mindestens zwei Zeichen haben.
 MostDslValidator.EntityNameMustNotBeExtensionEntity=Es darf keine Entität namens {0} geben, da dieser Name durch die entsprechende Erweiterung reserviert ist.
-MostDslValidator.EntityNameMustNotBeReserved=Der Name der Entität ist ein reservierter Bezeichner
-MostDslValidator.EntityNameMustNotContainUnderscores=Der Name der Entität darf keine Unterstriche enthalten, bitte umbenennen in 
-MostDslValidator.EntityNameMustNotEqualApplication=Eine Entität darf nicht den gleichen Namen haben wie die Anwendung.
-MostDslValidator.EntityNameShouldBeLonger=Der Name der Entität sollte eine Länge von mindestens vier Zeichen haben.
-MostDslValidator.EntityNameShouldStartWithLowerCase=Der Name der Entität sollte mit einem Kleinbuchstaben beginnen.
-MostDslValidator.EntityNeedsField=Jede Tabelle muss mindestens ein Feld enthalten oder Felder von einer Elterntabelle erben.
-MostDslValidator.EntityNeedsApplication=Die Entität muss einer Anwendung zugewiesen werden.
-MostDslValidator.EntityNeedsName=Jede Entität muss einen Namen haben.
+MostDslValidator.EntityNeedsAction=Jede Entität muss mindestens eine Aktion enthalten.
 MostDslValidator.EntityNeedsNameMultiple=Jede Entität muss einen Namen für mehrere Instanzen haben.
 MostDslValidator.EntityOptimisticLockingNeedsVersionField=Entitäten mit optimistischem Locking müssen ein Feld enthalten, das als Versionsfeld deklariert ist.
 MostDslValidator.EntityOwnerPermissionWithoutStandardFields=Entitäten mit Owner Permissions müssen die Standardfelder aktivieren.
@@ -228,6 +236,9 @@ MostDslValidator.EntityTreeMustNotContainReservedSource=Daher darf Deine Referen
 MostDslValidator.EntityTreeMustNotContainReservedTarget=Daher darf Deine Referenz diese Ziel-Aliase nicht enthalten.
 MostDslValidator.EntityWithArchiveRequiresEndDate=Entitäten mit einem Archiv müssen ein Zeitstempel- oder Datumsfeld enthalten, welches als Enddatum ausgezeichnet ist.
 MostDslValidator.EntityWithEnhancedWorkflowNeedsStandardFields=Entitäten mit erweiterten Workflows benötigen Standardfelder zur Identifikationd es Erstellers.
+MostDslValidator.MappedSuperclassMustNotBeBidirectional=Alle Assoziationen, die von gemappten Oberklassen ausgehen, müssen undirektional sein.
+MostDslValidator.MappedSuperclassMustNotHaveMultipleManyToManyRelations=Viele-zu-Viele-Beziehungen sind für gemappte Oberklassen nur möglich, wenn sie nur in einer Entität auf einmal verwendet werden.
+MostDslValidator.MappedSuperclassMustNotHaveOneToManyRelation=Eins-zu-Viele-Beziehungen sind nicht möglich für gemappte Oberklassen.
 MostDslValidator.NameIsInvalidIdentifier=Der Name muss ein gültiger Bezeichner sein (z. B. keine Leerzeichen oder Sonderzeichen): {0}.
 MostDslValidator.RelationshipInheritanceMustNotIncludeDiscriminatorColumnAsField=Bitte benenne das Feld {0} um, da es für die Discriminator-Column reserviert ist, oder verändere das entsprechende Attribut.
 MostDslValidator.RelationshipInheritanceNeedsDiscriminatorColumn=Das Attribut discriminatorColumn darf nicht leer sein für Vererbungsbeziehungen.
