--- a/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/QuickfixMessages_de.properties
+++ b/production/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/quickfix/QuickfixMessages_de.properties
@@ -1,39 +1,38 @@
-MostDslQuickfixProvider.AddABooleanFieldToTheEntity=Ein Boolean-Feld zur Entität '{0}' hinzufügen
+MostDslQuickfixProvider.AddABooleanFieldToTheEntity=Ein Boolean-Feld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddABooleanVariableTo=Eine Boolean-Variable zu '{0}' hinzufügen
-MostDslQuickfixProvider.AddACalculatedFieldToTheEntity=Ein berechnetes Feld zur Entität '{0}' hinzufügen
+MostDslQuickfixProvider.AddACalculatedFieldToTheEntity=Ein berechnetes Feld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddACustomActionToTheController=Eine eigene Aktion zum Controller '{0}' hinzufügen
 MostDslQuickfixProvider.AddACustomControllerToTheContainer=Einen eigenen Controller zum Container hinzufügen
-MostDslQuickfixProvider.AddADateFieldToTheEntity=Ein Datumsfeld zur Entität '{0}' hinzufügen
+MostDslQuickfixProvider.AddADateFieldToTheEntity=Ein Datumsfeld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddADatetimeFieldForStoringTheVersion=Ein Zeitstempelfeld zur Speicherung der Version hinzufügen
-MostDslQuickfixProvider.AddADatetimeFieldToTheEntity=Ein Zeitstempelfeld zur Entität '{0}' hinzufügen
-MostDslQuickfixProvider.AddADecimalFieldToTheEntity=Ein Dezimalfeld zur Entität '{0}' hinzufügen
+MostDslQuickfixProvider.AddADatetimeFieldToTheEntity=Ein Zeitstempelfeld zum Datenobjekt '{0}' hinzufügen
+MostDslQuickfixProvider.AddADecimalFieldToTheEntity=Ein Dezimalfeld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddADefaultEntityOrUseTheFirstOneIfExisting=Eine Standard-Entität hinzufügen oder die erste existierende verwenden
-MostDslQuickfixProvider.AddADefaultModelContainerOrUseTheFirstOneIfExisting=Einen Standard-Model-Container hinzufügen oder den ersten existierenden verwenden
 MostDslQuickfixProvider.AddADeleteActionToTheController=Eine Delete-Aktion zum Controller '{0}' hinzufügen
 MostDslQuickfixProvider.AddADisplayActionToTheController=Eine Display-Aktion zum Controller '{0}' hinzufügen
 MostDslQuickfixProvider.AddAdminController=Admin-Controller hinzufügen
 MostDslQuickfixProvider.AddADummyNameForTheImportedApplication=Einen Dummy-Namen für die importierte Anwendung hinzufügen
 MostDslQuickfixProvider.AddADummyUriExplainingTheFormat=Eine Dummy-URI zur Erklärung des Formates hinzufügen
 MostDslQuickfixProvider.AddAFilePathVariableTo=Eine Dateipfad-Variable zu '{0}' hinzufügen
-MostDslQuickfixProvider.AddAFloatFieldToTheEntity=Ein Fließkomma-Feld zur Entität '{0}' hinzufügen
+MostDslQuickfixProvider.AddAFloatFieldToTheEntity=Ein Fließkomma-Feld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddAjaxController=Ajax-Controller hinzufügen
-MostDslQuickfixProvider.AddAListFieldToTheEntity=Ein Listenfeld zur Entität '{0}' hinzufügen
+MostDslQuickfixProvider.AddAListFieldToTheEntity=Ein Listenfeld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddAListVariableTo=Eine Listen-Variable zu '{0}' hinzufügen
-MostDslQuickfixProvider.AddAMainActionToTheController=Eine Main-Aktion zum Controller '{0}' hinzufügen
-MostDslQuickfixProvider.AddAnEntityTo=Eine Entität zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnAdminControllerToTheContainer=Einen Admin-Controller zum Container hinzufügen
 MostDslQuickfixProvider.AddAnAjaxControllerToTheContainer=Einen Ajax-Controller zum Container hinzufügen
+MostDslQuickfixProvider.AddAnEntityTo=Eine Entität zu '{0}' hinzufügen
+MostDslQuickfixProvider.AddAnIndexActionToTheController=Eine Index-Aktion zum Controller '{0}' hinzufügen
 MostDslQuickfixProvider.AddANameForThisAction=Einen Namen für diese Aktion hinzufügen
 MostDslQuickfixProvider.AddANameForThisApplication=Einen Namen für diese Anwendung hinzufügen
 MostDslQuickfixProvider.AddANameForThisContainer=Einen Namen für diesen Container hinzufügen
 MostDslQuickfixProvider.AddANameForThisController=Einen Namen für diesen Controller hinzufügen
-MostDslQuickfixProvider.AddANameForThisEntity=Einen Namen für diese Entität hinzufügen
+MostDslQuickfixProvider.AddANameForThisDataObject=Einen Namen für dieses Datenobjekt hinzufügen
 MostDslQuickfixProvider.AddANameForThisField=Einen Namen für dieses Feld hinzufügen
 MostDslQuickfixProvider.AddANameForThisIndex=Einen Namen für diesen Index hinzufügen
 MostDslQuickfixProvider.AddANameForThisVariable=Einen Namen für diese Variable hinzufügen
-MostDslQuickfixProvider.AddAnArrayFieldToTheEntity=Ein Array-Feld zur Entität '{0}' hinzufügen
+MostDslQuickfixProvider.AddAnArrayFieldToTheEntity=Ein Array-Feld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnEditActionToTheController=Eine Edit-Aktion zum Controller '{0}' hinzufügen
-MostDslQuickfixProvider.AddAnEmailFieldToTheEntity=Ein E-Mail-Feld zur Entität '{0}' hinzufügen
+MostDslQuickfixProvider.AddAnEmailFieldToTheEntity=Ein E-Mail-Feld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnEntityOrUseTheFirstOneIfExisting=Eine Entität hinzufügen oder die erste existierende verwenden
 MostDslQuickfixProvider.AddAnEntityToTheContainer=Eine Entität zum Container hinzufügen
 MostDslQuickfixProvider.AddAnExampleItemTo=Einen Beispieleintrag zu '{0}' hinzufügen
@@ -45,21 +44,21 @@ MostDslQuickfixProvider.AddAnInitialMinimumVersionForThisApplicationImport=Eine 
 MostDslQuickfixProvider.AddAnInitialVersionForThisApplication=Eine initiale Version 1.0.0 für diese Anwendung hinzufügen
 MostDslQuickfixProvider.AddAnInputFieldToTheSubContainer=Ein Eingabefeld zum Sub-Container hinzufügen
 MostDslQuickfixProvider.AddAnIntegerFieldForStoringTheVersion=Ein Ganzzahl-Feld zur Speicherung der Version hinzufügen
-MostDslQuickfixProvider.AddAnIntegerFieldToTheEntity=Ein Ganzzahl-Feld zur Entität '{0}' hinzufügen
+MostDslQuickfixProvider.AddAnIntegerFieldToTheEntity=Ein Ganzzahl-Feld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnIntegerVariableTo=Eine Integer-Variable zu '{0}' hinzufügen
-MostDslQuickfixProvider.AddAnObjectFieldToTheEntity=Ein Objektfeld zur Entität '{0}' hinzufügen
-MostDslQuickfixProvider.AddAnUploadFieldToTheEntity=Ein Upload-Feld zur Entität '{0}' hinzufügen
-MostDslQuickfixProvider.AddAnUrlFieldToTheEntity=Ein URL-Feld zur Entität '{0}' hinzufügen
+MostDslQuickfixProvider.AddAnObjectFieldToTheEntity=Ein Objektfeld zum Datenobjekt '{0}' hinzufügen
+MostDslQuickfixProvider.AddAnUploadFieldToTheEntity=Ein Uploadfeld zum Datenobjekt '{0}' hinzufügen
+MostDslQuickfixProvider.AddAnUrlFieldToTheEntity=Ein URL-Feld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnUserControllerToTheContainer=Einen User-Controller zum Container hinzufügen
 MostDslQuickfixProvider.AddAPluralNameForThisEntity=Einen Mehrfachnamen für diese Entität hinzufügen
 MostDslQuickfixProvider.AddAPrefixForThisApplication=Ein Präfix für diese Anwendung hinzufügen
 MostDslQuickfixProvider.AddArrayField=Ein Array-Feld hinzufügen
 MostDslQuickfixProvider.AddAStringFieldForStoringTheZipcode=Ein String-Feld zur Speicherung der Postleitzahl hinzufügen
-MostDslQuickfixProvider.AddAStringFieldToTheEntity=Ein String-Feld zur Entität '{0}' hinzufügen
-MostDslQuickfixProvider.AddATextFieldToTheEntity=Ein Text-Feld zur Entität '{0}' hinzufügen
+MostDslQuickfixProvider.AddAStringFieldToTheEntity=Ein Stringfeld zum Datenobjekt '{0}' hinzufügen
+MostDslQuickfixProvider.AddATextFieldToTheEntity=Ein Textfeld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddATextVariableTo=Eine Text-Variable zu '{0}' hinzufügen
-MostDslQuickfixProvider.AddATimeFieldToTheEntity=Ein Zeitfeld zur Entität '{0}' hinzufügen
-MostDslQuickfixProvider.AddAUserFieldToTheEntity=Ein Benutzer-Feld zur Entität '{0}' hinzufügen
+MostDslQuickfixProvider.AddATimeFieldToTheEntity=Ein Zeitfeld zum Datenobjekt '{0}' hinzufügen
+MostDslQuickfixProvider.AddAUserFieldToTheEntity=Ein Benutzerfeld zum Datenobjekt '{0}' hinzufügen
 MostDslQuickfixProvider.AddAuthor=Autor hinzufügen
 MostDslQuickfixProvider.AddAViewActionToTheController=Eine View-Aktion zum Controller '{0}' hinzufügen
 MostDslQuickfixProvider.AddBooleanField=Boolean-Feld hinzufügen
@@ -82,6 +81,7 @@ MostDslQuickfixProvider.AddEntity=Entität hinzufügen
 MostDslQuickfixProvider.AddExampleUri=Beispiel-URI hinzufügen
 MostDslQuickfixProvider.AddFilePathVar=Dateipfad-Variable hinzufügen
 MostDslQuickfixProvider.AddFloatField=Fließkomma-Feld hinzufügen
+MostDslQuickfixProvider.AddIndexAction=Index-Aktion hinzufügen
 MostDslQuickfixProvider.AddIndexItem=Index-Eintrag hinzufügen
 MostDslQuickfixProvider.AddIntegerField=Ganzzahl-Feld hinzufügen
 MostDslQuickfixProvider.AddIntegerVersionField=Ganzzahl-Versionsfeld hinzufügen
@@ -89,7 +89,6 @@ MostDslQuickfixProvider.AddIntVar=Int-Var hinzufügen
 MostDslQuickfixProvider.AddListField=Listenfeld hinzufügen
 MostDslQuickfixProvider.AddListItem=Listeneintrag hinzufügen
 MostDslQuickfixProvider.AddListVar=List-Var hinzufügen
-MostDslQuickfixProvider.AddMainAction=Main-Aktion hinzufügen
 MostDslQuickfixProvider.AddMaxVersion=Max Version hinzufügen
 MostDslQuickfixProvider.AddMinVersion=Min Version hinzufügen
 MostDslQuickfixProvider.AddMultipleName=Mehrfachname hinzufügen
@@ -142,10 +141,10 @@ MostDslQuickfixProvider.CorrectPrefix=Präfix korrigieren
 MostDslQuickfixProvider.CorrectVendor=Anbieter korrigieren
 MostDslQuickfixProvider.CreateACustomControllerAndAssignTheActionToIt=Einen eigenen Controller erstellen und die Aktion zuordnen
 MostDslQuickfixProvider.CreateAdminController=Admin-Controller erstellen
-MostDslQuickfixProvider.CreateAModelContainerAndAssignTheEntityToIt=Einen Model-Container erstellen und die Entität zuordnen
 MostDslQuickfixProvider.CreateAnAdminControllerAndAssignTheActionToIt=Einen Admin-Controller erstellen und die Aktion zuordnen
-MostDslQuickfixProvider.CreateAnApplicationAndAssignTheContainerToIt=Eine Anwendung erstellen und den Container zuordnen
+MostDslQuickfixProvider.CreateAnApplicationAndAssignTheDataObjectToIt=Eine Anwendung erstellen und das Datenobjekt zuordnen
 MostDslQuickfixProvider.CreateAnApplicationAndAssignTheRelationshipToIt=Eine Anwendung erstellen und die Beziehung zuordnen
+MostDslQuickfixProvider.CreateAnEntityAndAssignTheActionToIt=Eine Entität erstellen und die Aktion zuordnen
 MostDslQuickfixProvider.CreateAnEntityAndAssignTheFieldToIt=Eine Entität erstellen und das Feld zuordnen
 MostDslQuickfixProvider.CreateAnEntityAndAssignTheIndexToIt=Eine Entität erstellen und den Index zuordnen
 MostDslQuickfixProvider.CreateAnEntityIndexAndAssignTheIndexItemToIt=Einen Entitäts-Index erstellen und den Index-Eintrag zuordnen
@@ -249,6 +248,10 @@ MostDslQuickfixProvider.RemoveTheUuidFlag=Das UUID-Flag entfernen
 MostDslQuickfixProvider.RemoveUniqueFlag=Das unique-Flag entfernen
 MostDslQuickfixProvider.RemoveUuidFlag=Das UUID-Flag entfernen
 MostDslQuickfixProvider.RemoveVersionFlag=Das version-Flag entfernen
+MostDslQuickfixProvider.RemoveTheViewAction=Die View-Aktion entfernen
+MostDslQuickfixProvider.RemoveTheDisplayAction=Die Display-Aktion entfernen
+MostDslQuickfixProvider.RemoveTheEditAction=Die Edit-Aktion entfernen
+MostDslQuickfixProvider.RemoveTheDeleteAction=Die Delete-Aktion entfernen
 MostDslQuickfixProvider.RenameTheElementsUsingACounter=Die Elemente mit einem Zähler umbenennen
 MostDslQuickfixProvider.RenameThePositionsUsingACounter=Die Positionen mit einem Zähler umbenennen
 MostDslQuickfixProvider.RenameWithCounter=Mit Zähler umbenennen
@@ -345,6 +348,5 @@ MostDslQuickfixProvider.UseTheFirstContainerRemoveTheOthersAfterMovingAllContent
 MostDslQuickfixProvider.UseTheFirstDefaultItemUnsetTheDefaultFlagForAllOtherOnes=Den ersten Standardeintrag verwenden, das Standard-Flag für alle anderen entfernen
 MostDslQuickfixProvider.UseTheFirstEntityAsTheLeadingOne=Die erste Entität als führende verwenden
 MostDslQuickfixProvider.UseTheFirstLeadingEntityAsTheLeadingOne=Die erste führende Entität als führende verwenden
-MostDslQuickfixProvider.UseTheFirstModelContainerAsDefaultDataSource=Den ersten Modell-Container als Standarddatenquelle verwenden
 MostDslQuickfixProvider.YourCompanyNameGoesHere=Dein Firmenname kommt hierhin
 MostDslQuickfixProvider.YourFullNameGoesHere=Dein voller Name kommt hierhin
