externalise page name

--- a/production/de.guite.modulestudio.ui.preferences.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/production/de.guite.modulestudio.ui.preferences.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -2,3 +2,5 @@
 pluginName=ModuleStudio UI Preferences
 providerName = Guite - Guckelsberger Informationstechnik
 fragmentName = ModuleStudio UI Preferences Locales Deutsch
+
+page.name = ModuleStudio
