--- a/production/de.guite.modulestudio.help.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/production/de.guite.modulestudio.help.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -3,3 +3,5 @@ pluginName=ModuleStudio Hilfe Plug-in
 providerName = Guite - Guckelsberger Informationstechnik
 fragmentName = ModuleStudio Hilfe Locales Deutsch
 helpTitle=Willkommen zur ModuleStudio Dokumentation
+
+help.index.mnemonic = I
